# personal-website

./: .gitignore  Cargo.toml  README.md  TODO.md  base-page-style.css  build.py  compile.py  document-styles.css  index.html  layout.css  merge.py  minify.py  page-modifications  sitemapper.py  style.css  tmp.html  website.yml
.github/workflows/: build-tool.yml  deploy.yml
about/: index.html
base-page/: index.html  style.css
blog/: README.md  build.py  compile.py  index.html  post_template.html
blog/posts/: kinetic-windows.blog  size-aosp.blog
builder/: .gitignore  Cargo.toml
builder/src/: builder.rs  fs_tree.rs  ir.rs  main.rs  sitemapper.rs  source_dir.rs  website_builder.rs
components/: about.html  blog-entry.html  blog-post.html  blog.html  footer.html
faq/: index.html
material/: theme.css  tokens.css  typography.module.css
pages/: about.md  index.yml  overview.md
pages/blog/: index.yml  kinetic-windows.blog  kinetic-windows.yml  size-aosp.blog  size-aosp.yml  size-aosp14-data.html  size-aosp14.md  size-aosp14.yml
projects/: index.html  projects.css
src/: main.rs  page_builder.rs  source_dir.rs
static/: 404.html
static/assets/: kinetik-windows-1.webm
static/unlisted/: play-privacy-bpapp.html  play-privacy-sequertial.html  play-privacy-spiritlevel.html  terms-bpapp.html  terms-sesquertial.html
templates/: base-page.html
