[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
yaml-rust2 = "0.8.1"
log = "0.4.22"
either = "1.13.0"
scraper = "0.20.0"
ego-tree = "0.6.2"
regex = "1.10.6"
once_cell = "1.19.0"
lewp-css = "0.2.0"
markdown = "0.3.0"
itertools = "0.13.0"
serde = "1.0.205"
serde_yml = "0.0.11"
chrono = "0.4.38"
pulldown-cmark = "0.11.0"
